<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dataDummy"
            type="com.fazahidah.dodolan.model.DataDummy" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/header"
                style="@style/header_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/status"
                    android:textColor="#353535"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/dot"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bulan_ini"
                    android:textSize="20sp" />
            </LinearLayout>

            <include
                android:id="@+id/balance_section"
                layout="@layout/custom_info_card"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toTopOf="@id/order_section"
                app:layout_constraintEnd_toStartOf="@+id/profit_section"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_title"
                android:layout_height="wrap_content"
                android:layout_width="0dp"/>

            <include
                android:id="@id/profit_section"
                layout="@layout/custom_info_card"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/balance_section"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/balance_section"
                app:layout_constraintTop_toTopOf="@id/balance_section" />

            <!--  Penghutang  -->

            <include
                android:id="@+id/order_section"
                layout="@layout/custom_info_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toStartOf="@+id/debt_section"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/balance_section" />

            <include
                layout="@layout/custom_info_card"
                android:id="@+id/debt_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/order_section"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/order_section"
                app:layout_constraintTop_toTopOf="@id/order_section"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/menu_card"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_box_spaces"
                android:layout_marginEnd="@dimen/medium_box_spaces"
                app:cardCornerRadius="4dp"
                app:layout_constraintTop_toBottomOf="@id/order_section">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/menu_1"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:cardCornerRadius="6dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_dompet"
                                tools:ignore="ContentDescription" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tambah_penjualan"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:cardCornerRadius="6dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_dompet"
                                tools:ignore="ContentDescription" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tambah_penjualan"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/latest_order_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/list_latest_order"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/menu_card" />

            <androidx.cardview.widget.CardView
                android:id="@+id/latest_order"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="@dimen/medium_box_spaces"
                app:cardCornerRadius="4dp"
                app:layout_constraintTop_toBottomOf="@id/latest_order_text">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/medium_margin"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:cardCornerRadius="6dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_order" />

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="#ORDER0001"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/chart_line_card"
                android:layout_width="0dp"
                android:layout_height="@dimen/medium_box_size"
                android:layout_margin="@dimen/medium_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/latest_order">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/medium_margin">

                    <TextView
                        android:id="@+id/title_textview"
                        style="@style/status_card_title_text"
                        android:text="@string/statistik"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/statistik" />

                    <!--                    <com.github.mikephil.charting.charts.LineChart-->
                    <!--                        android:id="@+id/chart_line"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="0dp"-->
                    <!--                        android:layout_marginTop="@dimen/medium_margin"-->
                    <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--                        app:layout_constraintEnd_toEndOf="parent"-->
                    <!--                        app:layout_constraintStart_toStartOf="parent"-->
                    <!--                        app:layout_constraintTop_toBottomOf="@id/title_textview" />-->

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>